# Simulator

./: CMakeLists.txt  main.cpp
Points/: PointsOperations.cpp  PointsOperations.h
SimObjects/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  SimObject.cpp  SimObject.h
Simulator/: Simulator.cpp  Simulator.h
